# ppsp

./: .gitignore  CLAUDE.md  DESIGN.md  GUIDE.md  README.md  changelog.md  design.md  devlog.md  guide.md  journal.md  original.py  pyproject.toml  wip.md
src/ppsp/: __init__.py  cli.py  commands.py  export.py  gui.py  interactive.py  models.py  naming.py  processing.py  rename.py  session.py  stacking.py  util.py  variants.py
tests/: conftest.py  test_chain.py  test_naming.py  test_pipeline.py  test_processing.py  test_rename.py  test_stacking.py  test_variants.py
